# LEX-EDITOR

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  SYNTAX.md  configuration.md  lex
docs/: configs.md  shortcut.md
resources/: README.md  bundle.h
resources/syntax/: go.json  html.json  markdown.json  php.json  typescript.json
scripts/: build.sh
src/: core_action.c  core_action.h  core_buildnum.c  core_config.c  core_config.h  core_editor.c  core_editor.h  core_file_io.c  core_file_io.h  core_highlight.c  core_highlight.h  core_input.c  core_input.h  core_main.c  core_nix.c  core_os.h  core_output.c  core_output.h  core_prompt.c  core_row.c  core_select.c  core_select.h  core_terminal.c  core_terminal.h  core_unicode.c  core_utils.c  core_win.c  input.c  output.c  prompt.c
